--- a/tienda_1/src/main/resources/templates/layout/plantilla.html
+++ b/tienda_1/src/main/resources/templates/layout/plantilla.html
@@ -35,6 +35,7 @@
                                    aria-expanded="false">[[#{plantilla.pruebas}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                    <li><a class="dropdown-item"  th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -46,7 +47,12 @@
                                     <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
                                 </ul>
                             </li>
-                        </ul>                        
+                        </ul>f
+                        <ul  class="navbar-nav">
+                            <li><a class="nav-link" th:href="@{/login}">
+                                    <i class="fa fa-sign-in-alt"></i>
+                                </a></li>
+                        </ul>
                     </div>
                 </div>
             </nav>
