--- a/tienda_1/src/main/resources/templates/layout/plantilla.html
+++ b/tienda_1/src/main/resources/templates/layout/plantilla.html
@@ -38,6 +38,7 @@
                                     <li><a  class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                                    <li><a class="dropdown-item"  th:href="@{/reportes/principal}">[[#{plantilla.reportes}]]</a></li>
                                 </ul>
                             </li>
                         </ul>
